--- a/youzify/includes/public/assets/css/youzify-account.css
+++ b/youzify/includes/public/assets/css/youzify-account.css
@@ -584,7 +584,8 @@
      line-height: 23px;
      position: absolute;
      text-align: center;
-     background-color: var(--yzfy-card-secondary-bg-color);
+     color: var(--yzfy-icon-text-color);
+     background-color: var(--yzfy-icon-color);
      -webkit-transition: all 0.5s ease-in-out;
      -moz-transition: all 0.5s ease-in-out;
      -o-transition: all 0.5s ease-in-out;
