--- a/youzify/includes/public/assets/css/youzify-woocommerce.css
+++ b/youzify/includes/public/assets/css/youzify-woocommerce.css
@@ -675,6 +675,7 @@
     background-color: #fff;
     border-top: 3px solid;
     padding: 1em 2em 1em 3.5em;
+    outline: none;
 }
 
 #youzify .youzify .woocommerce-message a.restore-item,
